fix scrollbar

--- a/src/styles/scrollbar.scss
+++ b/src/styles/scrollbar.scss
@@ -1,26 +1,27 @@
 :root {
   --sb-c-bg: rgb(var(--color-bg));
   --sb-c-tb: rgb(var(--color-accent));
-  --sb-w: 13px;
+  --sb-size: 13px;
 
   scrollbar-color: var(--sb-c-tb) var(--sb-c-bg);
   scrollbar-width: thin;
 }
 
-:root::-webkit-scrollbar {
-  width: var(--sb-w);
+::-webkit-scrollbar {
+  width: var(--sb-size);
+  height: var(--sb-size);
 }
 
-:root::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: var(--sb-c-bg);
   /* border: 1px solid rgba(152, 147, 147, 0.21);
 	border-radius: 10px; */
 }
 
-:root::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: var(--sb-c-tb);
 
   // box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.452);
   border: 4px solid var(--sb-c-bg);
-  border-radius: var(--sb-w);
+  border-radius: var(--sb-size);
 }
